--- a/config/sync/views.view.content.yml
+++ b/config/sync/views.view.content.yml
@@ -333,14 +333,14 @@ display:
           hide_alter_empty: true
           destination: true
           plugin_id: entity_operations
-        moderation_state:
-          id: moderation_state
+        status:
+          id: status
           table: node_field_data
-          field: moderation_state
+          field: status
           relationship: none
           group_type: group
           admin_label: ''
-          label: Status
+          label: Udgivet
           exclude: false
           alter:
             alter_text: false
@@ -381,11 +381,13 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
+          click_sort_column: value
+          type: boolean
           settings:
-            link: false
-          group_column: target_id
+            format: yes-no
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -396,7 +398,7 @@ display:
           separator: ', '
           field_api_classes: false
           entity_type: node
-          entity_field: moderation_state
+          entity_field: status
           plugin_id: field
       filters:
         type:
@@ -521,46 +523,6 @@ display:
           plugin_id: language
           entity_type: node
           entity_field: langcode
-        moderation_state:
-          id: moderation_state
-          table: node_field_data
-          field: moderation_state
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: moderation_state_op
-            label: Status
-            description: ''
-            use_operator: false
-            operator: moderation_state_op
-            identifier: moderation_state
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: moderation_state
-          plugin_id: string
       sorts: {  }
       title: Content
       empty:
