--- a/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
@@ -3,11 +3,14 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.media_browser
     - field.field.paragraph.social_media_embed.field_background_color
     - field.field.paragraph.social_media_embed.field_background_image
+    - field.field.paragraph.social_media_embed.field_facebook_embed
     - field.field.paragraph.social_media_embed.field_heading
+    - field.field.paragraph.social_media_embed.field_instagram_embed
     - field.field.paragraph.social_media_embed.field_link
-    - field.field.paragraph.social_media_embed.field_social_media
+    - field.field.paragraph.social_media_embed.field_twitter_embed
     - paragraphs.paragraphs_type.social_media_embed
   module:
     - entity_browser
@@ -21,7 +24,7 @@ third_party_settings:
         - field_background_color
         - field_background_image
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -30,6 +33,22 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Udseende
+      region: content
+    group_social_medias:
+      children:
+        - field_twitter_embed
+        - field_instagram_embed
+        - field_facebook_embed
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: 'Sociale medier'
       region: content
 id: paragraph.social_media_embed.default
 targetEntityType: paragraph
@@ -55,6 +74,19 @@ content:
     third_party_settings: {  }
     type: entity_browser_file
     region: content
+  field_facebook_embed:
+    type: entity_browser_entity_reference
+    weight: 7
+    settings:
+      entity_browser: media_browser
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
+    region: content
+    third_party_settings: {  }
   field_heading:
     weight: 0
     settings:
@@ -62,6 +94,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_instagram_embed:
+    weight: 6
+    settings:
+      rows: 2
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
     region: content
   field_link:
     weight: 1
@@ -71,20 +111,14 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
-  field_social_media:
-    type: entity_browser_entity_reference
-    weight: 6
+  field_twitter_embed:
+    weight: 5
     settings:
-      entity_browser: media_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: thumbnail
-      open: true
-    region: content
+      rows: 2
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textarea
+    region: content
 hidden:
   created: true
   status: true
