--- a/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
@@ -5,17 +5,29 @@ dependencies:
   config:
     - field.field.paragraph.social_media_embed.field_background_color
     - field.field.paragraph.social_media_embed.field_background_image
+    - field.field.paragraph.social_media_embed.field_facebook_embed
     - field.field.paragraph.social_media_embed.field_heading
+    - field.field.paragraph.social_media_embed.field_instagram_embed
     - field.field.paragraph.social_media_embed.field_link
-    - field.field.paragraph.social_media_embed.field_social_media
+    - field.field.paragraph.social_media_embed.field_twitter_embed
     - paragraphs.paragraphs_type.social_media_embed
   module:
     - link
+    - media_entity_instagram
+    - media_entity_twitter
 id: paragraph.social_media_embed.default
 targetEntityType: paragraph
 bundle: social_media_embed
 mode: default
 content:
+  field_facebook_embed:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_heading:
     weight: 0
     label: hidden
@@ -23,6 +35,15 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_instagram_embed:
+    weight: 4
+    label: hidden
+    settings:
+      width: null
+      hidecaption: false
+    third_party_settings: {  }
+    type: instagram_embed
     region: content
   field_link:
     weight: 1
@@ -36,13 +57,12 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-  field_social_media:
-    weight: 2
-    label: above
-    settings:
-      link: true
+  field_twitter_embed:
+    weight: 3
+    label: hidden
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_label
+    type: twitter_embed
     region: content
 hidden:
   field_background_color: true
