--- a/config/sync/field.storage.paragraph.field_facebook_embed.yml
+++ b/config/sync/field.storage.paragraph.field_facebook_embed.yml
@@ -1,16 +1,16 @@
-uuid: ad6ead72-adc7-4ec1-a124-515f0d5d9b70
+uuid: 381d2483-4dfc-488b-a335-196247f61a37
 langcode: da
 status: true
 dependencies:
   module:
-    - entity_browser
+    - media
     - paragraphs
-id: paragraph.field_social_media
-field_name: field_social_media
+id: paragraph.field_facebook_embed
+field_name: field_facebook_embed
 entity_type: paragraph
 type: entity_reference
 settings:
-  target_type: entity_browser
+  target_type: media
 module: core
 locked: false
 cardinality: 1
