--- a/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.paragraph.social_media_embed.field_background_color
     - field.field.paragraph.social_media_embed.field_background_image
     - field.field.paragraph.social_media_embed.field_heading
@@ -61,12 +62,12 @@ content:
   field_background_image:
     weight: 3
     settings:
-      preview_image_style: thumbnail
-      entity_browser: null
-      open: false
-      field_widget_edit: true
+      entity_browser: image_browser
       field_widget_remove: true
       selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      open: false
       view_mode: default
     third_party_settings: {  }
     type: entity_browser_file
