--- a/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_class_id
     - field.field.paragraph.class_packages.field_vih_background_color
+    - field.field.paragraph.class_packages.field_vih_background_image
     - field.field.paragraph.class_packages.field_vih_heading
     - field.field.paragraph.class_packages.field_vih_link
     - paragraphs.paragraphs_type.class_packages
@@ -20,8 +20,8 @@ third_party_settings:
     group_appearance:
       children:
         - field_background_image
+        - field_vih_background_image
         - field_vih_background_color
-        - field_background_color
       parent_name: ''
       weight: 4
       format_type: tab
@@ -38,19 +38,6 @@ targetEntityType: paragraph
 bundle: class_packages
 mode: default
 content:
-  field_background_image:
-    weight: 1
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    third_party_settings: {  }
-    type: entity_browser_file
-    region: content
   field_class_id:
     weight: 1
     settings:
@@ -61,11 +48,24 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_background_color:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 2
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_heading:
     weight: 0
     settings:
