--- a/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_class_id
     - field.field.paragraph.class_packages.field_vih_background_color
+    - field.field.paragraph.class_packages.field_vih_background_image
     - field.field.paragraph.class_packages.field_vih_heading
     - field.field.paragraph.class_packages.field_vih_link
     - image.style.paragraph_background_image
@@ -19,21 +19,21 @@ targetEntityType: paragraph
 bundle: class_packages
 mode: default
 content:
-  field_background_image:
-    weight: 1
+  field_vih_background_color:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_vih_background_image:
+    weight: 2
     label: hidden
     settings:
       image_style: paragraph_background_image
       image_link: ''
     third_party_settings: {  }
     type: image
-    region: content
-  field_vih_background_color:
-    weight: 3
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
     region: content
   field_vih_heading:
     weight: 0
@@ -44,7 +44,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       trim_length: 80
