--- a/config/sync/field.field.paragraph.class_packages.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.class_packages.field_vih_background_image.yml
@@ -1,9 +1,9 @@
-uuid: 4521f484-ce23-476d-86b5-2cc57979f66c
+uuid: 831c287f-0313-4ea1-807e-230bb2d358a8
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.class_packages
   module:
     - content_translation
@@ -11,11 +11,11 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
       file: '0'
-id: paragraph.class_packages.field_background_image
-field_name: field_background_image
+      alt: '0'
+      title: '0'
+id: paragraph.class_packages.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: class_packages
 label: Baggrundsbillede
@@ -30,7 +30,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: true
   title_field: false
   title_field_required: false
