--- a/config/sync/core.entity_view_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.file.default.yml
@@ -3,15 +3,16 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.file.field_background_image
     - field.field.paragraph.file.field_description
     - field.field.paragraph.file.field_vih_background_color
+    - field.field.paragraph.file.field_vih_background_image
     - field.field.paragraph.file.field_vih_heading
     - field.field.paragraph.file.field_vih_link
     - field.field.paragraph.file.file
     - paragraphs.paragraphs_type.file
   module:
     - file
+    - image
     - link
     - options
     - text
@@ -33,6 +34,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_vih_background_image:
+    weight: 5
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_vih_heading:
     weight: 0
@@ -61,5 +71,4 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-hidden:
-  field_background_image: true
+hidden: {  }
