--- a/config/sync/field.field.paragraph.file.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.file.field_vih_background_image.yml
@@ -1,20 +1,27 @@
-uuid: 74aa499a-c856-4cc3-ba48-6cdb2d96b7fe
+uuid: 292e7efc-d6b5-4ace-9d7f-532545472796
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.file
   module:
+    - content_translation
     - image
-id: paragraph.file.field_background_image
-field_name: field_background_image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: '0'
+      alt: '0'
+      title: '0'
+id: paragraph.file.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: file
 label: Baggrundsbillede
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
