--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         "drupal/media_entity_facebook": "2.0-alpha1",
         "drupal/url_embed": "1.x-dev",
         "drupal/advagg": "^3.4",
-        "drupal/focal_point": "^1.0@beta"
+        "drupal/focal_point": "^1.0@beta",
+        "drupal/schema_metatag": "^1.0"
     },
     "repositories": [
         {
